; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_module.c_skynet_module_instance_release.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_skynet_module.c_skynet_module_instance_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.skynet_module = type { i32 (i8*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @skynet_module_instance_release(%struct.skynet_module* %0, i8* %1) #0 {
  %3 = alloca %struct.skynet_module*, align 8
  %4 = alloca i8*, align 8
  store %struct.skynet_module* %0, %struct.skynet_module** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.skynet_module*, %struct.skynet_module** %3, align 8
  %6 = getelementptr inbounds %struct.skynet_module, %struct.skynet_module* %5, i32 0, i32 0
  %7 = load i32 (i8*)*, i32 (i8*)** %6, align 8
  %8 = icmp ne i32 (i8*)* %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %2
  %10 = load %struct.skynet_module*, %struct.skynet_module** %3, align 8
  %11 = getelementptr inbounds %struct.skynet_module, %struct.skynet_module* %10, i32 0, i32 0
  %12 = load i32 (i8*)*, i32 (i8*)** %11, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 %12(i8* %13)
  br label %15

15:                                               ; preds = %9, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
